examples/test/testpolicy11597.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11597
  namespace: namespace313
spec:
  podSelector:
    matchLabels:
      key30: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value5
          key10: value47
          key4: value23
      podSelector:
        matchLabels:
          key24: value12
          key10: value46
